--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,4 +1,6 @@
 <div>
   <!-- [] -->
-  <app-item *ngFor="let item of items" [item]="item" (deleteItem)="deleteItem($event)"></app-item>
+  <app-total mensaje="Total por pagar: " [total]="total"></app-total>
+  <app-item *ngFor="let item of items" [item]="item" (deleteItem)="deleteItem($event)"
+  (toggleItem)="toggleItem($event)"></app-item>
 </div>
