--- a/src/app/components/item/item.component.css
+++ b/src/app/components/item/item.component.css
@@ -23,7 +23,7 @@ div {
   width: 15%;
   padding: 0 5px;
 }
-.quantity {
+.quiantity {
   width: 10%;
   padding: 0 5px;
 }
@@ -64,7 +64,7 @@ div {
     min-width: 15%;
     font-size: 12px;
   }
-  .quantity {
+  .quiantity {
     min-width: 5%;
     font-size: 12px;
   }
